# PythonPets

./: README.md  condicoes_if_elif_else.py  funcoes.py  pyproject.toml  repeticoes_01_for.py  repeticoes_02_for.py
Agenda/: agenda.py  contatos.csv
Exercicios/: 01.ipynb  Exec_01.py  Exec_02.py  Exec_03.py  Exec_04.py  Exec_05.py
Olist/analise/: olist_aula.ipynb  olist_exec.ipynb
